Invalid access in GlobalLockServerStatusSection::generateSection()

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 3.7.3
    • Affects Version/s: None
    • Component/s: Storage
    • None
    • Fully Compatible
    • ALL
    • Hide

      Run snapshot_reads.js against a single-node replica set:

      python run_workloads.py --shell <shell> -w snapshot_read.js -p <port>
      
      Show
      Run snapshot_reads.js against a single-node replica set: python run_workloads.py --shell <shell> -w snapshot_read.js -p <port>
    • Storage NYC 2018-03-12
    • 56
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Stack trace:

      $ /home/jim/git/mongodb/mongo/master/buildscripts/mongosymb.py --symbolizer-path $LLVM_SYMBOLIZER_PATH/llvm-symbolizer /home/jim/Downloads/mongod/mongodb/bin/mongod  < ~/tmp/backtrace
       /data/mci/df4c2480a7edb9e284a2b02904986213/src/src/mongo/util/stacktrace_posix.cpp:172:0: mongo::printStackTrace(std::ostream&)
       /data/mci/df4c2480a7edb9e284a2b02904986213/src/src/mongo/util/signal_handlers_synchronous.cpp:180:0: mongo::(anonymous namespace)::printSignalAndBacktrace(int)
       /data/mci/df4c2480a7edb9e284a2b02904986213/src/src/mongo/util/signal_handlers_synchronous.cpp:276:0: mongo::(anonymous namespace)::abruptQuitWithAddrSignal(int, siginfo_t*, void*)
       ??:0:0: ??
       /opt/mongodbtoolchain/v2/include/c++/5.4.0/bits/unique_ptr.h:305:0: std::unique_ptr<mongo::Locker, std::default_delete<mongo::Locker> >::get() const
       /data/mci/df4c2480a7edb9e284a2b02904986213/src/src/mongo/db/operation_context.h:124:0: mongo::OperationContext::lockState() const
       /data/mci/df4c2480a7edb9e284a2b02904986213/src/src/mongo/db/stats/lock_server_status_section.cpp:64:0: mongo::(anonymous namespace)::GlobalLockServerStatusSection::generateSection(mongo::OperationContext*, mongo::BSONElement const&) const
       /data/mci/df4c2480a7edb9e284a2b02904986213/src/src/mongo/db/commands/server_status.h:101:0: mongo::ServerStatusSection::appendSection(mongo::OperationContext*, mongo::BSONElement const&, mongo::BSONObjBuilder*) const
       /data/mci/df4c2480a7edb9e284a2b02904986213/src/src/mongo/db/commands/server_status.cpp:139:0: mongo::CmdServerStatus::run(mongo::OperationContext*, std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> > const&, mongo::BSONObj const&, mongo::BSONObjBuilder&)
       /data/mci/df4c2480a7edb9e284a2b02904986213/src/src/mongo/db/commands.cpp:465:0: mongo::BasicCommand::enhancedRun(mongo::OperationContext*, mongo::OpMsgRequest const&, mongo::BSONObjBuilder&)
       /data/mci/df4c2480a7edb9e284a2b02904986213/src/src/mongo/db/commands.cpp:434:0: mongo::Command::publicRun(mongo::OperationContext*, mongo::OpMsgRequest const&, mongo::BSONObjBuilder&)
       /data/mci/df4c2480a7edb9e284a2b02904986213/src/src/mongo/db/commands.cpp:85:0: mongo::CommandHelpers::runCommandDirectly(mongo::OperationContext*, mongo::OpMsgRequest const&)
       /data/mci/df4c2480a7edb9e284a2b02904986213/src/src/mongo/db/ftdc/ftdc_server.cpp:256:0: mongo::FTDCSimpleInternalCommandCollector::collect(mongo::OperationContext*, mongo::BSONObjBuilder&)
       /data/mci/df4c2480a7edb9e284a2b02904986213/src/src/mongo/db/ftdc/collector.cpp:87:0: mongo::FTDCCollectorCollection::collect(mongo::Client*)
       /data/mci/df4c2480a7edb9e284a2b02904986213/src/src/mongo/db/ftdc/controller.cpp:244:0: mongo::FTDCController::doLoop()
       /data/mci/c24cae79e6b392ed36cddf211a0d9fb3/toolchain-builder/build-gcc-v2.sh-cob/x86_64-mongodb-linux/libstdc++-v3/src/c++11/../../../../../gcc-5.4.0/libstdc++-v3/src/c++11/thread.cc:84:0: execute_native_thread_routine
       ??:0:0: ??
       ??:0:0: ??
      

            Assignee:
            Tess Avitabile (Inactive)
            Reporter:
            Tess Avitabile (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: