SERVER-33485 Active clients should always have a lock state