src/mongo/db/repl/service_context_repl_mock.cpp
@@ -39,8 +39,7 @@ namespace repl {
 
 std::unique_ptr<OperationContext> ServiceContextReplMock::_newOpCtx(Client* client, unsigned opId) {
     auto opCtx = stdx::make_unique<OperationContextNoop>(client, opId);
-    opCtx->releaseLockState();
-    opCtx->setLockState(stdx::make_unique<MMAPV1LockerImpl>());
+    opCtx->swapLockState(stdx::make_unique<MMAPV1LockerImpl>());
     return {std::move(opCtx)};
 }
 
