src/mongo/db/session.cpp
@@ -475,11 +475,9 @@ void Session::stashTransactionResources(OperationContext* opCtx) {
     opCtx->getWriteUnitOfWork()->release();
     opCtx->setWriteUnitOfWork(nullptr);
 
-    _stashedLocker = opCtx->releaseLockState();
+    _stashedLocker = opCtx->swapLockState(stdx::make_unique<DefaultLockerImpl>());
     _stashedLocker->releaseTicket();
     _stashedRecoveryUnit.reset(opCtx->releaseRecoveryUnit());
-
-    opCtx->setLockState(stdx::make_unique<DefaultLockerImpl>());
     opCtx->setRecoveryUnit(opCtx->getServiceContext()->getGlobalStorageEngine()->newRecoveryUnit(),
                            OperationContext::kNotInUnitOfWork);
 }
@@ -502,9 +500,14 @@ void Session::unstashTransactionResources(OperationContext* opCtx) {
 
     if (_stashedLocker) {
         invariant(_stashedRecoveryUnit);
-        opCtx->releaseLockState();
         _stashedLocker->reacquireTicket();
-        opCtx->setLockState(std::move(_stashedLocker));
+
+        // We intentionally do not capture the return value of swapLockState(), which is just an
+        // empty locker. At the end of the operation, if the transaction is not complete, we will
+        // stash the operation context's locker and replace it with a new empty locker.
+        invariant(opCtx->lockState()->getClientState() == Locker::ClientState::kInactive);
+        opCtx->swapLockState(std::move(_stashedLocker));
+
         opCtx->setRecoveryUnit(_stashedRecoveryUnit.release(),
                                OperationContext::RecoveryUnitState::kNotInUnitOfWork);
         opCtx->setWriteUnitOfWork(WriteUnitOfWork::createForSnapshotResume(opCtx));
