src/mongo/db/catalog/catalog_raii_test.cpp
@@ -51,8 +51,7 @@ public:
     ClientAndCtx makeClientWithLocker(const std::string& clientName) {
         auto client = getGlobalServiceContext()->makeClient(clientName);
         auto opCtx = client->makeOperationContext();
-        opCtx->releaseLockState();
-        opCtx->setLockState(stdx::make_unique<DefaultLockerImpl>());
+        opCtx->swapLockState(stdx::make_unique<DefaultLockerImpl>());
         return std::make_pair(std::move(client), std::move(opCtx));
     }
 
